build: add nest js

--- a/package.json
+++ b/package.json
@@ -80,6 +80,9 @@
     "ts-jest": "^28.0.8"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.2.0",
+    "@nestjs/common": "^9.3.8",
+    "@nestjs/core": "^9.3.8",
     "turbo": "^1.4.3"
   },
   "resolutions": {
