--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -10,7 +10,7 @@
     "db-nuke": "docker-compose down --volumes --remove-orphans || docker compose down --volumes --remove-orphans",
     "db-reset": "run-s db-nuke db-setup",
     "db-seed": "yarn prisma db seed",
-    "db-setup": "run-s db-up db-deploy db-seed",
+    "db-setup": "run-s db-deploy db-seed",
     "db-studio": "yarn prisma studio",
     "db-up": "docker-compose up -d || docker compose up -d",
     "dx": "yarn db-setup",
