--- a/packages/prisma_pulse/package.json
+++ b/packages/prisma_pulse/package.json
@@ -11,17 +11,21 @@
     "db-nuke": "docker-compose down --volumes --remove-orphans || docker compose down --volumes --remove-orphans",
     "db-reset": "run-s db-nuke db-setup",
     "db-seed": "yarn prisma db seed",
-    "db-setup": "run-s db-up db-deploy db-seed",
+    "db-setup": "run-s db-deploy db-seed",
     "db-studio": "yarn prisma studio",
     "db-up": "docker-compose up -d || docker compose up -d",
     "dx": "yarn db-setup",
     "generate-schemas": "prisma generate && prisma format",
-    
+
     "post-install": "yarn generate-schemas",
     "seed-app-store": "ts-node --transpile-only ./seed-app-store.ts",
     "delete-app": "ts-node --transpile-only ./delete-app.ts"
   },
   "dependencies": {
     "prisma-nestjs-graphql": "^17.1.0"
+  },
+  "prisma": {
+    "seed": "ts-node seed.ts"
   }
 }
+
