--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dev:console": "turbo run dev --scope=\"@calcom/web\" --scope=\"@calcom/console\"",
     "dev:swagger": "turbo run dev --scope=\"@calcom/api\" --scope=\"@calcom/swagger\"",
     "dev:website": "turbo run dev --scope=\"@calcom/web\" --scope=\"@calcom/website\"",
-    "dev": "turbo run dev --scope=\"@calcom/web\"",
+    "dev": "turbo run dev --scope=\"@calcom/web\" --scope=\"clinic-back\"",
     "docs-build": "turbo run build --scope=\"@calcom/docs\" --include-dependencies",
     "docs-dev": "turbo run dev --scope=\"@calcom/docs\"",
     "docs-start": "turbo run start --scope=\"@calcom/docs\"",
