--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,6 @@ apps/storybook/build-storybook.log
 # Snaplet
 .snaplet/snapshots
 .snaplet/structure.d.ts
+
+apps/nestjs/src/@generated
+apps/nestjs/src/@generated1
