--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@nestjs/apollo": "^10.2.0",
     "@nestjs/common": "^9.3.8",
     "@nestjs/core": "^9.3.8",
+    "@calcom/prisma": "*",
     "turbo": "^1.4.3"
   },
   "resolutions": {
