--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # .env file
-.env
-!packages/prisma/.env
+# .env
+# !packages/prisma/.env
 
 # dependencies
 node_modules
@@ -34,13 +34,13 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env.*
-!.env.example
-!.env.appStore.example
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
+# .env.*
+# !.env.example
+# !.env.appStore.example
 
 # vercel
 .vercel
@@ -81,5 +81,11 @@ apps/storybook/build-storybook.log
 .snaplet/snapshots
 .snaplet/structure.d.ts
 
+
 apps/nestjs/src/@generated
 apps/nestjs/src/@generated1
+
+packages/prisma_pulse/pulse_client/index.js
+packages/prisma_pulse/pulse_client/libquery_engine-darwin.dylib.node
+packages/prisma_pulse/pulse_client/index.js
+
