--- a/apps/nest_js/.env
+++ b/apps/nest_js/.env
@@ -14,3 +14,7 @@ bcryptSaltOrRound="10"
 
 JWT_ACCESS_SECRET="nestjsPrismaAccessSecret"
 JWT_REFRESH_SECRET="nestjsPrismaRefreshSecret"
+
+AWS_BUCKET_NAME="pulse-backup-kyrg"
+SECRET_ACCESS_KEY="8ies/JrU9zLlRM+t2ZgjArZMbAjZ3WCinWaGCcPG"
+ACCESS_KEY_ID="AKIAWCNKZSCBDUKVVCGX"
