--- a/apps/nest_js/package.json
+++ b/apps/nest_js/package.json
@@ -32,8 +32,8 @@
 		"dx": "yarn dev"
 	},
 	"dependencies": {
-		"@calcom/prisma_pulse": "*",
 		"@calcom/prisma": "*",
+		"@calcom/prisma_pulse": "*",
 		"@nestjs/apollo": "^10.2.0",
 		"@nestjs/axios": "^1.0.1",
 		"@nestjs/common": "^9.0.0",
@@ -77,6 +77,7 @@
 		"@nestjs/testing": "^9.0.0",
 		"@types/express": "^4.17.13",
 		"@types/jest": "29.2.4",
+		"@types/multer": "^1.4.7",
 		"@types/node": "18.11.18",
 		"@types/passport-jwt": "^3.0.8",
 		"@types/passport-local": "^1.0.35",
