--- a/apps/nest_js/.env
+++ b/apps/nest_js/.env
@@ -8,7 +8,7 @@ DATABASE_URL_MONGO="mongodb+srv://admin:gpPHn4BEjdHyG91w@cluster0.bo29m4x.mongod
 DATABASE_NAME="pulse_dev"
 DATABASE_FULL_URL="mongodb+srv://admin:gpPHn4BEjdHyG91w@cluster0.bo29m4x.mongodb.net/pulse_dev"
 PORT="3000"
-SECURITY_EXPIRE="2d"
+SECURITY_EXPIRE="1s"
 SECURITY_REFRESH="30d"
 bcryptSaltOrRound="10"
 
