--- a/apps/nest_js/package.json
+++ b/apps/nest_js/package.json
@@ -69,7 +69,8 @@
 		"prisma": "^4.8.1",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.2.0",
-		"sharp": "^0.31.3"
+		"sharp": "^0.31.3",
+		"typesense": "^1.5.3"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^9.0.0",
