description and cal

--- a/apps/nest_js/.env
+++ b/apps/nest_js/.env
@@ -11,6 +11,7 @@ PORT="3000"
 SECURITY_EXPIRE="1s"
 SECURITY_REFRESH="30d"
 bcryptSaltOrRound="10"
+CAL_COM_APP_URL="http://localhost:3000"
 
 JWT_ACCESS_SECRET="nestjsPrismaAccessSecret"
 JWT_REFRESH_SECRET="nestjsPrismaRefreshSecret"
