--- a/apps/nest_js/.env
+++ b/apps/nest_js/.env
@@ -11,7 +11,7 @@ PORT="3000"
 SECURITY_EXPIRE="1d"
 SECURITY_REFRESH="1y"
 bcryptSaltOrRound="10"
-CAL_COM_APP_URL="http://localhost:3000"
+CAL_COM_APP_URL="https://pulse-node-web.vercel.app/"
 
 JWT_ACCESS_SECRET="nestjsPrismaAccessSecret"
 JWT_REFRESH_SECRET="nestjsPrismaRefreshSecret"
